--- a/roles/CMEDB/tasks/main.yml
+++ b/roles/CMEDB/tasks/main.yml
@@ -1,3 +1,31 @@
+- name: Stop FBLCME-MongoDB service
+  win_service:
+    name: FBLCME-MongoDB
+    state: stopped
+    start_mode: manual
+    username: LocalSystem
+
+- name: Stop FBLCME-Tomcat8.5 service
+  win_service:
+    name: FBLCME-Tomcat8.5
+    state: stopped
+    start_mode: manual
+    username: LocalSystem
+
+- name: Stop FBLCME-Tomcat8.5-Scheduler-DDT service
+  win_service:
+    name: FBLCME-Tomcat8.5-Scheduler-DDT
+    state: stopped
+    start_mode: manual
+    username: LocalSystem
+
+- name: Stop FBLCME-Tomcat8.5-Scheduler-HDE service
+  win_service:
+    name: FBLCME-Tomcat8.5-Scheduler-HDE
+    state: stopped
+    start_mode: manual
+    username: LocalSystem
+
 - name: 'Check that the FBLCME folder exists'
   win_file:
     path: 'C:\FBLCME'
@@ -133,3 +161,31 @@
   become: true
   win_shell:
        Invoke-Command -ComputerName "{{ InstanceMSSQL }}" -ScriptBlock {Backup-SqlDatabase -ServerInstance "{{ InstanceMSSQL }}" -Database "{{ Database }}" -BackupFile "{{ BackupPath }}\\FBCME_preUG_$(get-date -f MM-dd-yyyy).bak"}
+       
+- name: Start FBLCME-MongoDB service
+  win_service:
+    name: FBLCME-MongoDB
+    state: started
+    start_mode: delayed
+    username: LocalSystem
+
+- name: Start FBLCME-Tomcat8.5 service
+  win_service:
+    name: FBLCME-Tomcat8.5
+    state: started
+    start_mode: delayed
+    username: LocalSystem
+
+- name: Start FBLCME-Tomcat8.5-Scheduler-DDT service
+  win_service:
+    name: FBLCME-Tomcat8.5-Scheduler-DDT
+    state: started
+    start_mode: delayed
+    username: LocalSystem
+
+- name: Start FBLCME-Tomcat8.5-Scheduler-HDE service
+  win_service:
+    name: FBLCME-Tomcat8.5-Scheduler-HDE
+    state: started
+    start_mode: delayed
+    username: LocalSystem
