--- a/vars/main.yml
+++ b/vars/main.yml
@@ -23,7 +23,9 @@ cme_db_catalog: FBLCME
 cme_admin_user: iyakubenko0519@nterprise.net
 cme_admin_password: L3tsdanc311!!Ok3
 Scriptsource: /home/ansible/loan_iq-master/roles/MONGO/files
+Scriptpath: localhost:27017/monDev
 MongoFolder: C:\Program Files\MongoDB\Server\4.0\bin
+
 
 
 #BackupDB
