--- a/roles/MONGO/tasks/main.yml
+++ b/roles/MONGO/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Copy script file to DB host
   win_copy:
-    src: "{{ Scriptsource }}"/script.js
+    src: "{{ Scriptsource }}/script.js"
     dest: "{{ MongoFolder }}\\script.js"
 
 - name: Change host url
