--- a/vars/main.yml
+++ b/vars/main.yml
@@ -25,6 +25,8 @@ cme_admin_password: L3tsdanc311!!Ok3
 Scriptsource: /home/ansible/loan_iq-master/roles/MONGO/files
 Scriptpath: localhost:27017/monDev
 MongoFolder: C:\Program Files\MongoDB\Server\4.0\bin
+sourceurl: fblqa.develop.fcbt
+targeturl: fblenkedevbe.develop.fcbt
 
 
 
