Add ignore errors for cme coping from source

--- a/roles/CMEDB/tasks/main.yml
+++ b/roles/CMEDB/tasks/main.yml
@@ -54,11 +54,13 @@
   become_method: runas
   win_shell: copy-item "{{cme_source_app_folder}}" -destination "{{cme_target_app_folder}}" -recurse -ErrorAction SilentlyContinue
   become: yes
+  ignore_errors: true
 
 - name: Copy inetpub to target
   become_method: runas
   win_shell: copy-item "{{cme_source_web_folder}}" -destination "{{cme_target_web_folder}}" -recurse -ErrorAction SilentlyContinue
   become: yes
+  ignore_errors: true
 
 - name: Change Hostname in C:\FBLCME\Tomcat8.5\server.xml file
   become_method: runas
