Fix cme var linking

--- a/roles/CMEDB/tasks/main.yml
+++ b/roles/CMEDB/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: 'Check that the FBLCME folder exists'
   win_stat:
-    path: {{ cme_fblcme_folder }}
+    path: "{{ cme_fblcme_folder }}"
   register: stat_file
 
 - name: 'Ensure Release folder exist'
