--- a/roles/CMEDB/tasks/main.yml
+++ b/roles/CMEDB/tasks/main.yml
@@ -44,7 +44,7 @@
   when: stat_file.stat.exists == True
 
 - name: 'Quick Backup to Release folder'
-  win_shell: "mv {{ cme_fblcme_folder }} C:\\Releases\\FBL_{{ latest_relese }}_{{lookup('pipe', 'date +%m_%d_%Y_%H:%M:%S')}}"
+  win_shell: "mv {{ cme_fblcme_folder }} C:\\Releases\\FBL_{{ latest_relese }}_{{lookup('pipe', 'date +%m_%d_%Y_%H-%M-%S')}}"
   become: true
   become_method: runas
   become_flags: logon_type=new_credentials logon_flags=netcredentials_only
