--- a/roles/CMEDB/tasks/main.yml
+++ b/roles/CMEDB/tasks/main.yml
@@ -102,7 +102,7 @@
   become: yes
   win_share:
     name: FBLCME
-    path: "{{ FBLCME }}"
+    path: "{{ cme_fblcme_folder }}"
     full: Administrators
     read: Everyone
 
