Change order of vars

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,12 +4,6 @@ ansible_winrm_transport: ntlm
 ansible_user: DEVELOP\svcEnkeDeployments
 #Ansible password
 ansible_password: FarmCreditBank#1
-ansible_connection: winrm
-ansible_port: 5985
-ansible_winrm_send_cbt: false
-ansible_winrm_server_cert_validation: ignore
-ansible_become_user: "{{ ansible_user }}"
-ansible_become_password: "{{ ansible_password }}"
 
 #General
 #Release version - used in backup dir naming
@@ -22,15 +16,11 @@ ecnryption_password: 'LIQPASSWORD'
 cme_source_app_folder: '\\FBLQACMEFE1.develop.fcbt\FBLCME'
 #CME source folder for inetpub
 cme_source_web_folder: '\\FBLQACMEFE1.develop.fcbt\c$\inetpub'
-cme_target_app_folder: 'C:\'
-cme_target_web_folder: 'C:\'
+
 #CME DB catalog name
 cme_db_catalog: 'FBCME'
 cme_admin_user: iyakubenko0519@nterprise.net
 cme_admin_password: L3tsdanc311!!Ok3
-cme_tomcat_folder: 'C:\FBLCME\Tomcat8.5'
-cme_fblcme_folder: 'C:\FBLCME'
-mongo_script_source: roles/MONGO/templates
 #MongoDB connection line
 mongo_script_path: localhost:27017/monDev
 mongo_folder: 'C:\Program Files\MongoDB\Server\3.4\bin'
@@ -41,14 +31,11 @@ mongo_targeturl: fblenkedevcmefe
 #BackupDB
 #DB host
 mssql_db_instance: EnkeFblDevBe1.develop.fcbt
-#Path to place backup
-db_backup_path: D:\SQLBackup
 
 #Variables Misysboard
 #Misys board target folder
 misys_source_folder: '\\FBLQAUXP.develop.fcbt\loaniq\Server\misysboard_node'
 misys_service_name: 'FBL_Misysboard'
-misys_target_folder: 'C:\LOANIQ\Server'
 misys_source_api_host: 'FBLQARAPI'
 misys_target_api_host: 'ENKEFBLDEVAPI'
 misys_source_fblcmeqa_host: 'FBLCME-QA'
@@ -59,7 +46,6 @@ misys_host_name_target: 'ENKEFBLDEVUXP.develop.fcbt'
 #Variables MT
 #LoanIQ source folder
 loaniq_source_app_folder: '\\FBLQAMT.develop.fcbt\C$\LOANIQ'
-loaniq_target_app_folder: 'C:\'
 loaniq_service_name: 'STARTLIQ_2020'
 loaniq_db_catalog: 'FBLoanIQ'
 
@@ -67,7 +53,6 @@ loaniq_db_catalog: 'FBLoanIQ'
 #RestAPi source host
 rest_api_main_source_server: FBLQARAPI
 rest_api_main_target_server: ENKEFBLDEVRAPI
-rest_api_share_path: '\\{{ rest_api_main_source_server }}\C$\LOANIQ'
 rest_api_service_name: startliq_2020
 rest_api_source_BE_host: 'FBLQABE'
 rest_api_target_BE_host: 'ENKEFBLDEVBE'
@@ -75,3 +60,21 @@ rest_api_source_MT_host: FBLQAMT
 rest_api_target_MT_host: ENKEFBLDEVMT
 rest_api_source_FB_Lhost: FBLQACME
 rest_api_target_FBL_host: ENKEFBLDEVCMEFE
+
+#Misc
+ansible_connection: winrm
+ansible_port: 5985
+ansible_winrm_send_cbt: false
+ansible_winrm_server_cert_validation: ignore
+ansible_become_user: "{{ ansible_user }}"
+ansible_become_password: "{{ ansible_password }}"
+cme_tomcat_folder: 'C:\FBLCME\Tomcat8.5'
+cme_fblcme_folder: 'C:\FBLCME'
+mongo_script_source: roles/MONGO/templates
+cme_target_app_folder: 'C:\'
+cme_target_web_folder: 'C:\'
+#Path to place backup
+db_backup_path: D:\SQLBackup
+misys_target_folder: 'C:\LOANIQ\Server'
+loaniq_target_app_folder: 'C:\'
+rest_api_share_path: '\\{{ rest_api_main_source_server }}\C$\LOANIQ'
